
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hr-talent-matching-rag"
version = "0.1.0"
description = "Ground candidate-to-role matching on job requirements, resumes, and recruiter notes."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
